--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,80 +11,55 @@
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  height: 52px;
-  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  background-color: #fff;
+  @apply flex justify-between items-center fixed w-full h-[52px] top-0 shadow-sm bg-white;
 }
 
 .navbar__logo {
-  color: rgb(252, 46, 0);
-  font-size: 18px;
-  cursor: pointer;
-  padding: 0 18px;
+  @apply text-[18px] text-orange100 cursor-pointer px-[18px] py-0;
   font-family: "HakgyoansimDunggeunmisoTTF-B";
 }
 
 .navbar__list {
-  padding: 0 18px;
-  display: flex;
-  gap: 12px;
-  align-items: center;
+  @apply flex gap-3 items-center px-[18px] py-0;
 }
 
 .navbar__button {
-  display: none;
-  cursor: pointer;
+  @apply hidden cursor-pointer;
 }
 
 .navbar__list--item {
-  cursor: pointer;
+  @apply cursor-pointer;
 }
 
 .navbar__list--item:hover {
-  color: rgb(252, 46, 0);
+  @apply text-orange100;
 }
 
 .layout {
-  padding-top: 52px;
+  @apply pt-[52px];
 }
 
 @media only screen and (max-width: 600px) {
   .navbar--mobile {
-    position: fixed;
-    width: 100%;
-    top: 52px;
-    background-color: #ff9500;
-    color: #fff;
-    height: 100%;
+    @apply fixed w-full text-white h-screen top-[52px] bg-orange50;
   }
   .navbar__list {
-    display: none;
+    @apply hidden;
   }
 
   .navbar__button {
-    display: block;
-    padding: 0 18px;
+    @apply block px-[18px] py-0;
   }
 
   .navbar__list--item--mobile {
-    cursor: pointer;
+    @apply cursor-pointer;
   }
 
   .navbar__list--item--mobile:hover {
-    color: rgb(252, 46, 0);
+    @apply text-orange100;
   }
 
   .navbar__list--mobile {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    align-items: start;
-    padding: 24px 18px;
+    @apply flex flex-col gap-4 items-start px-[18px] py-6;
   }
 }
