--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,3 +63,7 @@
     @apply flex flex-col gap-4 items-start px-[18px] py-6;
   }
 }
+
+.infowindow {
+  @apply bg-orange100 text-white block text-sm text-center h-6 rounded-sm px-2 leading-6;
+}
