--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@
 }
 
 .navbar {
-  @apply flex justify-between items-center fixed w-full h-[52px] top-0 shadow-sm bg-white;
+  @apply flex justify-between items-center fixed w-full h-[52px] top-0 shadow-sm bg-white z-[100];
 }
 
 .navbar__logo {
